# pppoe-socks

./: .gitignore  Cargo.toml  Dockerfile  compose.yml  init.sh  nftables.conf  rt_tables
.github/workflows/: deploy.yml
client/: Dockerfile  init.sh
danted/: danted1.conf
src/: config.rs  main.rs  pppoe_client.rs  pppoe_manager.rs  proxy_server.rs  route_manger.rs
src/bot/: mod.rs
src/core/: config.rs  logger.rs
src/network/: route.rs
src/pppoe/: client.rs  manager.rs
src/proxy/: server.rs
