[package]
name = "ppproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.37.2"
log = "0.4"
env_logger = "0.11.8"
dotenvy = "0.15.7"
serde_json = "1.0.145"
anyhow = "1.0.100"

[profile.release]
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1